Added html snippets for a navigation and jumbotron. Also added CSS to the classes I made in html.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
   <title>Heya Stranger!</title>
 </head>
 <body>
-  <!--Need to add logo image-->
   <!--Navigation-->
+  <div class="navigation">
+    <!--Need to add logo image-->
+    <img src= >
+    <<ul>
+      <li>Work</li>
+      <li>About</li>
+      <<li>Contact</li>
+    </ul>
+  </div>
+  <!-- Adding a Jumbotron header -->
+  <div class="content-box">
+    <div class="content-header">
+      <h1>dk07io</h1>
+    </div>
+  </div>
   <<ul>
     <li>About</li>
     <li>Work</li>
