Removed additional ul list

--- a/index.html
+++ b/index.html
@@ -24,13 +24,9 @@
       <h1>dk07io</h1>
     </div>
   </div>
-  <<ul>
-    <li>About</li>
-    <li>Work</li>
-    <li>Contact</li>
-  </ul>
-
-  <h1>Welcome to DK's Site</h1>
+  <div class="Header" >
+    <h1> Welcome to DK's Site </h1>
+  </div>
 
 </body>
 </html>
