--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
   </div>
   <!-- Adding a Jumbotron header -->
   <div class="content-box">
-    <div class="content-header">
+    <div class="jumbotron">
       <h1>dk07io</h1>
     </div>
   </div>
