--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@
   <div class="Header" >
     <h1> Welcome to DK's Site </h1>
   </div>
+  <div>
+    <p>This is a paragraph element. :D </p>
+  </div>
 
 </body>
 </html>
