Adjusted navigation font size and moved navigation div into jumbotron div

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
   <!--Navigation-->
-  <div class="navigation">
-    <!--Need to add logo image-->
-    <img src= >
-    <<ul>
-      <li>Work</li>
-      <li>About</li>
-      <<li>Contact</li>
-    </ul>
-  </div>
   <!-- Adding a Jumbotron header -->
   <div class="jumbotron">
+    <div class="navigation">
+      <!--Need to add logo image-->
+      <img src= >
+      <ul>
+        <li>Work</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </div>
     <h1>dk07io</h1>
   </div>
 
