Removed jumbotron and added background image to the body instead

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
   <!--Navigation-->
   <!-- Adding a Jumbotron header -->
-  <div class="jumbotron">
-    <div class="navigation">
+  <div class="navigation">
       <!--Need to add logo image-->
       <img src= >
       <ul>
@@ -19,9 +18,13 @@
         <li>About</li>
         <li>Contact</li>
       </ul>
-    </div>
+  </div>
+
+  <div>
     <h1>dk07io</h1>
   </div>
+
+  
 
   <div class="Header" >
     <h1> Welcome to DK's Site </h1>
