Added back jumbotron class into html and added a few elements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <!--Navigation-->
   <!-- Adding a Jumbotron header -->
+  <div>  </div>
   <div class= "navigation" >
       <!--Need to add logo image-->
     <ul>
@@ -19,8 +20,11 @@
     </ul>
   </div>
 
-  <div>
-    <h1>dk07io</h1>
+  <div class= "jumbotron">
+    <div class= "main">
+      <h1>Hi my name is Daniel</h1>
+      <a class="btn-main" href="#">Work</a>
+    </div>
   </div>
 
   <div class= "Header" >
