Added a header and moved the navigation elements into it

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 <body>
   <!--Navigation-->
   <!-- Adding a Jumbotron header -->
-  <div>  </div>
-  <div class= "navigation" >
-      <!--Need to add logo image-->
-    <ul>
-      <li>Work</li>
-      <li>About</li>
-      <li>Contact</li>
-    </ul>
+  <div class="header">
+    <div class= "navigation" >
+        <!--Need to add logo image-->
+      <ul>
+        <li>Work</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </div>
   </div>
+
 
   <div class= "jumbotron">
     <div class= "main">
       <h1>Hi my name is Daniel</h1>
-      <a class="btn-main" href="#">Work</a>
     </div>
   </div>
 
