Accidentally removed link from jumbotron. Added it back

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <div class= "jumbotron">
     <div class= "main">
       <h1>Hi my name is Daniel</h1>
+      <a class="btn-main" href="#">Work</a>
     </div>
   </div>
 
