--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -29,7 +29,7 @@
     </div>
   </div>
 
-  <div class= "Header" >
+  <div>
     <h1> Welcome to DK's Site </h1>
   </div>
 
